@@ -1,3 +1,5 @@
+-Make newlines outside of tables and latex tags work again (reported by Gnome)
+
 -Fix bug converting existing cards to Cloze cards (reported by Jin Hale).
 -'Untagged' now always shows up last in the tag tree, even if there are tags
  starting with a number
